# FENRIS

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CLI.md  CONTRIBUTING.md  EXAMPLES.md  EXTENDING.md  LICENSE  README-DEV.md  README.md  example.py  pyproject.toml  requirements.txt
.github/workflows/: ci.yml  publish.yml  release.yml
core/: pyproject.toml
core/fedbench/: __main__.py  common.py  server_policy.py
core/fedbench/_flwr/: server.py
dataprep/: dump.py  lung_cancer.csv  requirements.txt
datasets/: heart_disease.csv  prepare_datasets.py  requirements.txt
diagrams/: c4component.mmd  c4container.mmd  c4context.mmd  data_split_strategy.mmd  sequence_train_eval.mmd
docs/: PROJECT_DESCRIPTION.md  main.tex  sources.bib
example/: fed_awesome.py  pyproject.toml
fedbench/: __init__.py  __main__.py  _import.py  _pluginregistry.py  _plugins.py  _registry.py  aggregator.py  algorithm.py  common.py  configurator.py  errors.py  pyproject.toml  server_policy.py  strategy.py  synthesizer.py
fedbench/_flwr/: client.py  common.py  server.py  server_policy_adapter.py
fedbench/client/: registry.py
fedbench/common/: __init__.py
fedbench/flower/: adapters.py  client.py  server.py  strategy_adapter.py
fedbench/server/: registry.py  server_policy.py
fedbench_tests/: test_pluginregistry.py  test_registries.py
plugins/example/: pyproject.toml
plugins/example/fed_awesome/: fed_awesome.py
src/fedbench/: __main__.py  common.py  component_factory.py  event.py  eventbus.py  pipeline.py  registries.py  registry.py  registry_builders.py  resolver.py  runner.py
src/fedbench/_flwr/: __init__.py  client.py  serde.py  server.py  strategy.py
src/fedbench/algorithms/: __init__.py  algorithm.py  fed_chaos.py  fed_hello.py  fed_naughty.py  fed_noop.py  fed_random.py  fed_smoke.py  fed_tgan.py  synthesizer.py
src/fedbench/algorithms/fed_tgan/: __init__.py  data_sampler.py  data_transformer.py  discriminator.py  fed_tgan.py  generator.py  tests.py  training.py  weighting.py
src/fedbench/algorithms/fed_tgan_alt/: __init__.py  data_sampler.py  data_transformer.py  discriminator.py  fed_tgan_alt.py  generator.py  weighting.py
src/fedbench/algorithms/fedtabdiff/: __init__.py  config.py  coordinator.py  diffuser.py  fedtabdiff.py  flwr_client.py  main.py  mlpsynth.py  synthesizer.py  utils.py
src/fedbench/app/: factory.py  registry.py
src/fedbench/app/run/: command.py  eventbus.py  partitioned_dataset.py  pipeline.py  runcontext.py  runner.py  scalability_collector.py
src/fedbench/app/scaffold/: __init__.py
src/fedbench/builtins/algorithms/: fed_hello.py
src/fedbench/builtins/coordinators/: fed_tgan.py  fedavg.py
src/fedbench/builtins/evaluators/: __init__.py  _helpers.py  fairness.py  fidelity.py  privacy.py  scalability.py  utility.py
src/fedbench/builtins/partitioners/: __init__.py  flwr_delegates.py
src/fedbench/builtins/synthesizers/: fed_hello.py  fed_naughty.py
src/fedbench/cli/: generate_schema.py  main.py  new.py  run.py  scaffolder.py  show.py  subclass_builder.py  temporary_test.py
src/fedbench/cli/plugin/: __init__.py  _component.py  _util.py  (+3 more)
src/fedbench/config/: __init__.py  builder.py  config.py  parsing.py
src/fedbench/coordinators/: __init__.py  fedavg.py
src/fedbench/core/: algorithm.py  command.py  component.py  encoder.py  eventbus.py  events.py  factory_registry.py  logger.py  logging.py  payload.py  pipeline.py  runcontext.py  types.py  update.py
src/fedbench/data/: __init__.py  flwr_delegate_partitioner.py  infer_schema.py  loaders.py  partitioned_dataset.py  partitioner.py  schemas.py
src/fedbench/eval/: context.py  suite.py
src/fedbench/evaluators/: __init__.py  _helpers.py  evaluator.py  fairness.py  fidelity.py  privacy.py  scalability.py  utility.py
src/fedbench/flwr/: __init__.py  _client.py  client.py  client_app.py  client_cache_wrapper.py  client_context.py  namespace.py  rdict.py  serde.py  server.py  server_app.py  strategy.py
src/fedbench/partitioners/: __init__.py  flwr_delegates.py
src/fedbench/runtime/: command.py  component_factory.py  early_stopping_monitor.py  factory.py  pipeline.py  platform_info.py  registry.py  registry_builder.py  runcontext.py  runner.py  scalability_collector.py
src/fedbench/scaffold/: subclass_builder.py
src/fedbench/synthesizers/: __init__.py  fed_smoke.py  synthesizer.py
src/fedbench/util/: metrics.py  parsing.py  platform_info.py
src/fenris/: __init__.py
src/fenris/app/: factory.py  plugins.py  registry.py
src/fenris/cli/: generate_schema.py  main.py  run.py  show.py
src/fenris/config/: __init__.py  builder.py  config.py  parsing.py
src/fenris/core/: component.py  encoder.py  events.py  logger.py  payload.py
src/fenris/flwr/: __init__.py  namespace.py  rdict.py  serde.py
tests/: data_tests.py  fake_components.py  registry_tests.py  test_config.py  test_data_layer.py  test_encoder.py  test_eventbus.py  test_factory_registry.py  test_flwr_rdict_views.py  test_flwr_serde.py  test_partitioner.py  test_platform_info.py  test_registries.py  test_registry.py  test_runctx_fields.py  test_seed_derivation.py  test_synthesizers.py  test_write_artifacts.py
tests/eval/: conftest.py  test_base.py  test_context.py  test_metrics_shape.py  test_suite.py
tests/eval/evaluators/: test_fairness.py  test_fidelity.py  test_fidelity_extended.py  test_privacy.py  test_scalability.py  test_utility.py
tests/integration/: conftest.py  test_determinism.py  test_fed_naughty.py
tests/test_algorithms/: test_fed_chaos.py  test_fed_naughty.py  test_fed_tgan_alt.py
tests/test_evaluators/: conftest.py  test_edge_cases.py  test_fairness.py  test_fidelity.py  test_privacy.py  test_utility.py
tests/test_scaffold/: test_scaffold.py
tests/test_scaffold/components/: base.py  override_abstract_with_abstract.py  override_abstract_with_concrete.py  override_cls_var.py  with_mixin.py
tests/test_subclass_builder/: test_subclass_builder.py
tests/test_subclass_builder/components/: base.py  override_abstract_with_abstract.py  override_abstract_with_concrete.py  with_mixin.py
(+107 files in other folders)
