[project]
name = "fenris"
version = "0.1.0"
description = "An Extensible Benchmarking Framework for Federated Synthetic Tabular Data Generators"
authors = [
    {name = "Trond Thorsteinsson", email = "trondthorsteinsson@gmail.com"},
    {name = "Alexander Rød Opedal", email = "alexander@opedal.org"},
    {name = "Bård Linga", email = "bardlinga@gmail.com"},
    {name = "Ken Solbakken Remen", email = "kenremen@gmail.com"},
    {name = "Thomas Stavik Lønning", email = "loenning1995@gmail.com"},
]
license = "MIT"
requires-python = ">=3.12,<3.14"

dependencies = [
    "flwr[simulation] (>=1.25.0,<2.0.0)",
    "typer (>=0.12.5,<0.21.0)",
    "numpy (>=2.4.2,<3.0.0)",
    "pandas (>=3.0.0,<4.0.0)",
    "flwr-datasets (>=0.6.0,<0.7.0)",
    "datasets (>=4.5.0,<5.0.0)",
    "scipy (>=1.17.0,<2.0.0)",
    "scikit-learn (>=1.8.0,<2.0.0)",
    "libcst (>=1.8.6,<2.0.0)",
    "tomlkit (>=0.14.0,<0.15.0)",
    "torch (>=2.10.0,<3.0.0)",
]

[dependency-groups]
dev = [
    "mypy (>=1.19.1,<2.0.0)",
    "pytest (>=9.0.2,<10.0.0)",
    "pytest-cov (>=6.0.0,<7.0.0)",
    "scipy-stubs (>=1.17.0.2,<2.0.0.0)",
    "pandas-stubs (>=3.0.0.260204,<4.0.0.0)",
    "ruff (>=0.9.0)",
    "pre-commit (>=4.5.1,<5.0.0)",
]

[project.scripts]
fenris = "fenris.cli.main:app"

[project.entry-points."fenris.synthesizers"]
fed_hello     = "fenris.builtins.synthesizers.fed_hello:FedHello"
fed_naughty   = "fenris.builtins.synthesizers.fed_naughty:FedNaughty"
fedtabdiff    = "fenris.builtins.synthesizers.fedtabdiff:FedTabDiff"
fed_tgan      = "fenris.builtins.synthesizers.fed_tgan:FedTGAN"
fed_simplegan = "fenris.builtins.synthesizers.fed_simplegan:FedSimpleGAN"

[project.entry-points."fenris.coordinators"]
fedavg = "fenris.builtins.coordinators.fedavg:FedAvg"
fed_tgan = "fenris.builtins.coordinators.fed_tgan:FedTGAN"

[project.entry-points."fenris.evaluators"]
moment_reduction_metrics        = "fenris.builtins.evaluators.fidelity:MomentReductionMetricsEvaluator"
distribution_similarity_metrics = "fenris.builtins.evaluators.fidelity:DistributionSimilarityMetricsEvaluator"
categorical_tv_mean             = "fenris.builtins.evaluators.fidelity:CategoricalTvMeanEvaluator"
corr_fro_diff                   = "fenris.builtins.evaluators.fidelity:CorrFroDiffEvaluator"

tstr                        = "fenris.builtins.evaluators.utility:TSTREvaluator"
direct_overlap_diagnostic   = "fenris.builtins.evaluators.privacy:DirectOverlapDiagnosticEvaluator"
mia_nearest_neighbor_attack = "fenris.builtins.evaluators.privacy:MIANearestNeighborAttackEvaluator"
aia_supervised_attack       = "fenris.builtins.evaluators.privacy:AIASupervisedAttackEvaluator"

fairness    = "fenris.builtins.evaluators.fairness:FairnessEvaluator"
scalability = "fenris.builtins.evaluators.scalability:ScalabilityEvaluator"

[project.entry-points."fenris.partitioners"]
iid_partitioner          = "fenris.builtins.partitioners.flwr_delegates:FlwrDelegatePartitioner.with_iid_partitioner"
linear_partitioner       = "fenris.builtins.partitioners.flwr_delegates:FlwrDelegatePartitioner.with_linear_partitioner"
square_partitioner       = "fenris.builtins.partitioners.flwr_delegates:FlwrDelegatePartitioner.with_square_partitioner"
exponential_partitioner  = "fenris.builtins.partitioners.flwr_delegates:FlwrDelegatePartitioner.with_exponential_partitioner"
dirichlet_partitioner    = "fenris.builtins.partitioners.flwr_delegates:FlwrDelegatePartitioner.with_dirichlet_partitioner"
pathological_partitioner = "fenris.builtins.partitioners.flwr_delegates:FlwrDelegatePartitioner.with_pathological_partitioner"
shard_partitioner        = "fenris.builtins.partitioners.flwr_delegates:FlwrDelegatePartitioner.with_shard_partitioner"
continuous_partitioner   = "fenris.builtins.partitioners.flwr_delegates:FlwrDelegatePartitioner.with_continuous_partitioner"


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"


[tool.poetry]
packages = [{include = "fenris", from = "src"}]

# --- PYTEST CONFIG ---

[tool.pytest.ini_options]
addopts = "-m 'not integration and not torch'"
markers = [
    "integration: full end-to-end pipeline tests (slow; run with -m integration)",
    "torch: tests that require PyTorch to be installed",
]

# --- MYPY CONFIG ---

[tool.mypy]
mypy_path = ["src"]
strict = true
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "torch.*"
follow_imports = "skip"
follow_imports_for_stubs = true

# --- RUFF CONFIG ---

[tool.ruff]
line-length = 88
src = ["src", "tests"]

[tool.ruff.lint]
# E, W: pycodestyle (standard errors and warnings)
# F: pyflakes (unused variables/imports)
# I: isort (automatic import sorting)

# TODO: add along the way to enforce docstrings
# DOC: pydoclint (checks that docstrings match function signatures)
# D: pydocstyle (checks docstring formatting)
select = ["E", "W", "F", "I"]

[tool.ruff.lint.pydocstyle]
convention = "numpy"