[project]
name = "fenris"
version = "0.1.0"
description = "An Extensible Benchmarking Framework for Federated Synthetic Tabular Data Generators"
readme = "README.md"
authors = [
    {name = "Trond Thorsteinsson", email = "trondthorsteinsson@gmail.com"},
    {name = "Ken Solbakken Remen", email = "kenremen@gmail.com"},
    {name = "Alexander Rød Opedal", email = "alexander@opedal.org"},
    {name = "Bård Hogne Solheimslid Linga", email = "bardlinga@gmail.com"},
    {name = "Thomas Stavik Lønning", email = "loenning1995@gmail.com"},
]
license = "MIT"
requires-python = ">=3.12,<3.14"

dependencies = [
    "flwr[simulation]~=1.25.0",
    "typer~=0.20.1",
    "numpy~=2.4.2",
    "pandas~=3.0.0",
    "datasets~=4.5.0",
    "flwr-datasets~=0.6.0",
    "scipy~=1.17.0",
    "scikit-learn~=1.8.0",
    "libcst~=1.8.6",
    "tomlkit~=0.14.0",
    "torch~=2.10.0",
]

[dependency-groups]
dev = [
    "mypy~=1.19.1",
    "pytest~=9.0.2",
    "pytest-cov~=6.3.0",
    "scipy-stubs~=1.17.0.2",
    "pandas-stubs~=3.0.0.260204",
    "ruff~=0.15.12",
    "pre-commit~=4.5.1",
]

[project.scripts]
fenris = "fenris.cli.main:app"

[project.entry-points."fenris.synthesizers"]
fed_hello     = "fenris.builtins.synthesizers.fed_hello:FedHello"
fed_naughty   = "fenris.builtins.synthesizers.fed_naughty:FedNaughty"
fedtabdiff    = "fenris.builtins.synthesizers.fedtabdiff:FedTabDiff"
fed_tgan      = "fenris.builtins.synthesizers.fed_tgan:FedTGAN"
fed_simplegan = "fenris.builtins.synthesizers.fed_simplegan:FedSimpleGAN"

[project.entry-points."fenris.coordinators"]
fedavg = "fenris.builtins.coordinators.fedavg:FedAvg"
fed_tgan = "fenris.builtins.coordinators.fed_tgan:FedTGAN"

[project.entry-points."fenris.evaluators"]
moment_reduction_metrics        = "fenris.builtins.evaluators.fidelity:MomentReductionMetricsEvaluator"
distribution_similarity_metrics = "fenris.builtins.evaluators.fidelity:DistributionSimilarityMetricsEvaluator"
categorical_tv_mean             = "fenris.builtins.evaluators.fidelity:CategoricalTvMeanEvaluator"
corr_fro_diff                   = "fenris.builtins.evaluators.fidelity:CorrFroDiffEvaluator"

tstr                        = "fenris.builtins.evaluators.utility:TSTREvaluator"
direct_overlap_diagnostic   = "fenris.builtins.evaluators.privacy:DirectOverlapDiagnosticEvaluator"
mia_nearest_neighbor_attack = "fenris.builtins.evaluators.privacy:MIANearestNeighborAttackEvaluator"
aia_supervised_attack       = "fenris.builtins.evaluators.privacy:AIASupervisedAttackEvaluator"

fairness    = "fenris.builtins.evaluators.fairness:FairnessEvaluator"
scalability = "fenris.builtins.evaluators.scalability:ScalabilityEvaluator"

[project.entry-points."fenris.partitioners"]
iid_partitioner          = "fenris.builtins.partitioners.flwr_delegates:IidPartitioner"
linear_partitioner       = "fenris.builtins.partitioners.flwr_delegates:LinearPartitioner"
square_partitioner       = "fenris.builtins.partitioners.flwr_delegates:SquarePartitioner"
exponential_partitioner  = "fenris.builtins.partitioners.flwr_delegates:ExponentialPartitioner"
dirichlet_partitioner    = "fenris.builtins.partitioners.flwr_delegates:DirichletPartitioner"
pathological_partitioner = "fenris.builtins.partitioners.flwr_delegates:PathologicalPartitioner"
shard_partitioner        = "fenris.builtins.partitioners.flwr_delegates:ShardPartitioner"
continuous_partitioner   = "fenris.builtins.partitioners.flwr_delegates:ContinuousPartitioner"


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"


[tool.poetry]
packages = [{include = "fenris", from = "src"}]

# --- PYTEST CONFIG ---

[tool.pytest.ini_options]
addopts = "-m 'not integration'"
markers = [
    "integration: full end-to-end pipeline tests (slow; run with -m integration)",
    "torch: tests that require PyTorch to be installed",
]

# --- MYPY CONFIG ---

[tool.mypy]
mypy_path = ["src"]
strict = true
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "torch.*"
follow_imports = "skip"
follow_imports_for_stubs = true

# --- RUFF CONFIG ---

[tool.ruff]
line-length = 88
src = ["src", "tests"]

[tool.ruff.lint]
preview = true  # required for pydoclint to work

select = [
    "E", # E: pycodestyle errors
    "W", # W: pycodestyle warnings
    "F", # F: pyflakes (unused variables/imports)
    "I", # I: isort (automatic import sorting)

    "D", # D: pydocstyle (checks docstring formatting)
    "DOC", # DOC: pydoclint (checks that docstrings match function signatures)

    "D212", # Multi-line docstring summary should start at the first line.
    "D415", # First line should end with a period, question mark, or exclamation point.
    "D417", # All parameters in signature should be documented.
]

ignore = [
    "D100", # Missing docstring in public module # TODO
    "D104", # Missing docstring in public package # TODO
    "D205", # Blank line required between summary and description
                                        # (Due to line-length restrictions, this rule also forces
                                        # summaries to fit on one line, which is not always possible)

    "D401", # First line must be in imperative mood
    "D403", # First word must be capitalized - not desirable for the more mathematical docstrings
]


[tool.ruff.lint.per-file-ignores]
# TODO: Eventually, the whole codebase should be kept to the same standard as core
# For now, we are more lenient with anything outside of core
"!src/fenris/core/**" = [
    "D101", # Missing docstring in public class
    "D102", # Missing docstring in public method
    "D103", # Missing docstring in public function
    "D105", # Missing docstring in magic method
    "DOC501", # Raised exception missing from docstring
    "DOC201", # `return` not documented in docstring
]

# TODO: evalsuite does not belong in core and does not need to be kept to current core standards
# (This should match the ignore list above)
"src/fenris/core/eval/evalsuite.py" = [
    "D101", # Missing docstring in public class
    "D102", # Missing docstring in public method
    "D103", # Missing docstring in public function
    "D105", # Missing docstring in magic method
    "DOC501", # Raised exception missing from docstring
    "DOC201", # `return` is not documented in docstring
]

[tool.ruff.lint.pydocstyle]
convention = "numpy"