[project]
name = "example"
version = "0.1.0"
description = ""
requires-python = ">=3.12,<4.0"
dependencies = [
    "flwr (>=1.25.0,<2.0.0)",
    "numpy (>=2.4.2,<3.0.0)",
    "fedbench @ file:///home/trond/courses/DATA3900/FedBench/core"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[project.entry-points."fedbench.algorithms"]
fed_awesome="fed_awesome.fed_awesome:FedAwesome"

[dependency-groups]
dev = [
    "mypy (>=1.19.1,<2.0.0)"
]

[tool.poetry]
packages = [{include = "fed_awesome"}]

[tool.poetry.dependencies]
fedbench = {develop = true}

[tool.mypy]
mypy_path = ["../../core"]
